--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Choose Your Own Adventure</title>
     <script
-    src="http://code.jquery.com/jquery-3.4.1.slim.min.js"
+    src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8="
     crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Kelly+Slab|Nosifer|VT323&display=swap" rel="stylesheet">
