--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
 
 <head>
     <title>Choose Your Own Adventure</title>
-    <script
-    src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-    integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8="
-    crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Kelly+Slab|Nosifer|VT323&display=swap" rel="stylesheet">
     <link type="text/css" href="index.css" rel="stylesheet" />
 </head>
